--- a/resume.html
+++ b/resume.html
@@ -17,10 +17,40 @@
     </header>
     <section>
         <!-- Main Body -->
-        <div class="flexContainerBody">
-            Placeholder Text
-            <br>
-            Email: <a href="mailto:KaTaylor1@gmail.com">KaTaylor1@gmail.com</a>
+        <div class="flexContainerBodyResume">
+            <div class="resume"><!-- Skills-->
+            <h2 class="subtitle">Skills</h2>
+                <ul>
+                    <li>User Research & Writing</li>
+                    <li>Interactive Prototyping & Wireframing</li>
+                    <li>User-centric Design Thinking</li>
+                    <li>User Research, Analysis and Data Synthesis</li>
+                    <li>Prototyping from Low-fidelity to High-fi Mockups</li>
+                    <li>Time Management, Detail Oriented and Team Work</li>
+                    <li>Strong Written, Verbal and Visual Communication</li>
+                    <li>HTML5 & CSS</li>
+                </ul>
+            </div>
+            <div class="resume"><!-- Software & Platforms -->
+                <h2 class="subtitle">Software & Platforms</h2>
+                <ul>
+                    <li>Figma</li>
+                    <li>Adobe Photoshop</li>
+                    <li>GitHub</li>
+                    <li>Miro</li>
+                    <li>Adobe Xd</li>
+                    <li>InVision</li>
+                    <li>Trello</li>
+                    <li>Visual Studio</li>
+                </ul>
+            </div>
+            <div class="resume"><!-- Resume -->
+                <h2 class="subtitle">Resume</h2>
+                <ul>
+                    <li><a href="resume/KimTaylorResume2021.pdf"  target="_blank" rel=”noopener noreferrer”>pdf</a></li>
+                    <li><a href="https://docs.google.com/document/d/1PnSJe19fzjUsa_lpIFtvXL_HQijV__-fj0Gw9OU1X80/edit?usp=sharing" target="_blank" rel=”noopener noreferrer”>pdf in Google Drive</a></li>
+                </ul>
+            </div>
         </div>
     </section>
     <footer>
