media queries attempts
many attempts to get code to work with media queries so that banners are two across for desktop & tablets, but a single column for phones.  still doesn't work the way I want it to.  1) Can't figure out how to get portfolio rectangles 1-4 all the same size/width
note: using background colours red & blue to troubleshoot

--- a/index.html
+++ b/index.html
@@ -7,62 +7,73 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <main>
-        <!-- /////// HEADER  ROW 1 ///////-->
+   <header>
+<!---------------------- /////// HEADER  ROW 1 ///////------------------------->
         <div class="logo"><img src="images/Logo Kim Taylor.png" alt="Kim Taylor UX/UI Designer" width="270" height="131"></div>
         <div class="header"><!--HEADER SPACER--></div>
         <div class="primaryNavHeader">
             <!-- PRIMARY NAVIGATION -->
             <a href="work.html" class="primaryNav">WORK</a><a href="resume.html" class="primaryNav">RESUME</a><a href="contact.html" class="primaryNav">CONTACT</a>
         </div>
-        <!-- /////// CONTENT BANNERS ROW 2 /////// -->
-        <div class="contentBanner1"> <!-- EVA -->
-            <div class="contentBannerText">
-                <h1 class="homepage">Eva</h1>
-                <br><br>
-                <b>Case Study</b> 
-                <br>Mobile App Concept
-                <br>Group Project, 4 team members
-                <br><b>My Role:</b> UX/UI Developer
-            </div>
+    </header>
+    <main>
+<!----------------------- /////// CONTENT BANNERS ROW 2 /////// ---------------->
+     <section class="contentBannerA">
+         <div class="contentBanner1"> <!-- EVA -->
+            <div class="contentBanner">
+                <div class="contentBannerText">
+                    <h1 class="homepage">Eva</h1>
+                    <br><br>
+                    <b>Case Study</b> 
+                    <br>Mobile App Concept
+                    <br>Group Project, 4 team members
+                    <br><b>My Role:</b> UX/UI Developer</div>
             <div><!-- content banner image --><img src="images/Eva.png" alt="Eva"></div>
+          </div>
         </div>
-        <div class="contentBanner2"><!-- PACT -->
+        <div class="contentBanner2">
+        <div class="contentBanner"><!-- PACT -->
              <div class="contentBannerText">
                 <h1 class="homepage">PACT</h1>
                 <br><br>
                 <b>Case Study</b> 
                 <br>Not-for-Profit Website Redesign
                 <br>Group Project, 4 team members
-                <br><b>My Role:</b> UX/UI Developer
-            </div>
+                <br><b>My Role:</b> UX/UI Developer</div>
             <div><!-- content banner image --><img src="images/PACT.png" alt="PACT"></div>
         </div>
-        <!-- CONTENT BANNERS ROW 3 -->
-        <div class="contentBanner3">
+    </div>
+    </section>
+<!------------------------ CONTENT BANNERS ROW 3 --------------------------------->
+    <section class="contentBannerB">  
+    <div class="contentBanner3">
+        <div class="contentBanner">
             <div class="contentBannerText">
                 <h1 class="homepage">Canadian Space Agency</h1>
                 <br><br>
                 <b>Case Study</b> 
                 <br>Government Agency Website Redesign
                 <br>Group & Solo Project, 2 team members
-                <br><b>My Role:</b> UX/UI Developer
-           </div>
+                <br><b>My Role:</b> UX/UI Developer</div>
            <div><!-- content banner image --><img src="images/CSA.png" alt="Canadian Space Agency"></div>
         </div>
+        </div>
         <div class="contentBanner4">
-            <div class="contentBannerText">
-                <h1 class="homepage">Connected Travel</h1>
-                <br><br>
-                <b>Case Study</b> 
-                <br>Mobile App Concept
-                <br>Group & Solo Project, 2 team members
-                <br><b>My Role:</b> UX/UI Developer
-           </div>
+            <div class="contentBanner">
+                <div class="contentBannerText">
+                    <h1 class="homepage">Connected Travel</h1>
+                    <br><br>
+                    <b>Case Study</b> 
+                    <br>Mobile App Concept
+                    <br>Group & Solo Project, 2 team members
+                    <br><b>My Role:</b> UX/UI Developer</div>
            <div><!-- content banner image --><img src="images/ConnectTravel.png" alt="Connect Travel"></div>
         </div>
-        <!-- /////// INTRO TEXT ROW 4 /////// -->
-        <div class="introText">
+    </div>
+    </section>
+<!----------------------------- /////// INTRO TEXT ROW 4 /////// ------------------>
+    <section class="introText">
+        <div>
             <!-- INTRO TEXT -->
             <p>Kim Taylor is a UX/UI Designer with a UX/UI certificate from the University of Toronto, School of Continuing Studies.
             <br><br>With professional experience in every aspect of a project’s life cycle, from requirements gathering to usability testing; site development, and quality assurance.  
@@ -70,13 +81,15 @@
             <br><br>
             <a class="email" href="mailto:kataylor1@gmail.com">KaTaylor1@gmail.com</a></p>
         </div>
-        <div class="whiteSpace"><!-- WHITE SPACE --></div>
-        <!-- /////// FOOTER ROW 5 ///////-->
-        <div class="copyright">&#169; Kim Taylor 2021</div>
-        <div class="footer">&nbsp;</div>
-        <div class="footerLinks"><a href="mailto:kataylor1@gmail.com"><img src="images/envelope.png" alt="Email Me"></a>
+    </section>
+</main>
+<!---------------------- /////// FOOTER ROW 5 ///////-------------------------->
+<footer>
+    <div>&#169; Kim Taylor 2021</div>
+        <div><a href="mailto:kataylor1@gmail.com"><img src="images/envelope.png" alt="Email Me"></a>
             &nbsp;&nbsp;<a href="" target="_blank"  rel="noopener noreferrer"><img src="images/LI-In-Bug 1.png" alt="LinkedIn"></a>&nbsp;
         </div>
-    </main>
+</footer>  
+    
 </body>
 </html>
