mobile view fix but No images
Fixed layers of text and alignment and primaryNav in mobile view.
But, fixed without images.  New (?) issue with Case Study titles.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <br>Mobile App Concept
                     <br>Group Project, 4 team members
                     <br><b>My Role:</b> UX/UI Developer</div>
-            <div><!-- content banner image --><img src="images/Eva.png" alt="Eva"></div>
+            <div><!-- content banner image --><!-- <img src="images/Eva.png" alt="Eva"> --></div>
           </div>
         </div>
         <div class="contentBanner2">
@@ -40,13 +40,14 @@
                 <br>Not-for-Profit Website Redesign
                 <br>Group Project, 4 team members
                 <br><b>My Role:</b> UX/UI Developer</div>
-            <div><!-- content banner image --><img src="images/PACT.png" alt="PACT"></div>
+            <div><!-- content banner image --><!-- <img src="images/PACT.png" alt="PACT"> --></div>
         </div>
     </div>
     </section>
 <!------------------------ CONTENT BANNERS ROW 3 --------------------------------->
     <section class="contentBannerB">  
-    <div class="contentBanner3">
+    <!-- Banner 3 -->
+        <div class="contentBanner3">
         <div class="contentBanner">
             <div class="contentBannerText">
                 <h1 class="homepage">Canadian Space Agency</h1>
@@ -55,9 +56,10 @@
                 <br>Government Agency Website Redesign
                 <br>Group & Solo Project, 2 team members
                 <br><b>My Role:</b> UX/UI Developer</div>
-           <div><!-- content banner image --><img src="images/CSA.png" alt="Canadian Space Agency"></div>
+           <div><!-- content banner image --><!-- <img src="images/CSA.png" alt="Canadian Space Agency"> --></div>
         </div>
         </div>
+        <!-- Banner 4 -->
         <div class="contentBanner4">
             <div class="contentBanner">
                 <div class="contentBannerText">
@@ -67,7 +69,7 @@
                     <br>Mobile App Concept
                     <br>Group & Solo Project, 2 team members
                     <br><b>My Role:</b> UX/UI Developer</div>
-           <div><!-- content banner image --><img src="images/ConnectTravel.png" alt="Connect Travel"></div>
+           <div><!-- content banner image --><!-- <img src="images/ConnectTravel.png" alt="Connect Travel"> --></div>
         </div>
     </div>
     </section>
