fixes to banners, still issues
I've made alot of tweaks and fixed a few banner issues.
But why wont banners take up 100% of screen?!?

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kim Taylor UX/UI Designer</title>
     <link rel="stylesheet" href="css/style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
    <header>
 <!---------------------- /////// HEADER  ROW 1 ///////------------------------->
         <div class="logo"><img src="images/Logo Kim Taylor.png" alt="Kim Taylor UX/UI Designer" width="270" height="131"></div>
+        <h1 class="animate__animated animate__hinge">Work In Progress
+        </h1>
         <div class="header"><!--HEADER SPACER--></div>
         <div class="primaryNavHeader">
             <!-- PRIMARY NAVIGATION -->
@@ -20,19 +26,17 @@
 <!----------------------- /////// CONTENT BANNERS ROW 2 /////// ---------------->
      <section class="contentBannerA">
          <div class="contentBanner1"> <!-- EVA -->
-            <div class="contentBanner">
-                <div class="contentBannerText">
+            <div class="contentBannerText">
                     <h1 class="homepage">Eva</h1>
                     <br><br>
                     <b>Case Study</b> 
                     <br>Mobile App Concept
                     <br>Group Project, 4 team members
                     <br><b>My Role:</b> UX/UI Developer</div>
-            <div><!-- content banner image --><!-- <img src="images/Eva.png" alt="Eva"> --></div>
-          </div>
+            <div><!-- content banner image --><img src="images/Eva.png" alt="Eva"></div>
         </div>
         <div class="contentBanner2">
-        <div class="contentBanner"><!-- PACT -->
+        <!-- PACT -->
              <div class="contentBannerText">
                 <h1 class="homepage">PACT</h1>
                 <br><br>
@@ -40,39 +44,34 @@
                 <br>Not-for-Profit Website Redesign
                 <br>Group Project, 4 team members
                 <br><b>My Role:</b> UX/UI Developer</div>
-            <div><!-- content banner image --><!-- <img src="images/PACT.png" alt="PACT"> --></div>
+            <div><!-- content banner image --><img src="images/PACT.png" alt="PACT"></div>
         </div>
-    </div>
     </section>
 <!------------------------ CONTENT BANNERS ROW 3 --------------------------------->
-    <section class="contentBannerB">  
+<section class="contentBannerB">  
     <!-- Banner 3 -->
-        <div class="contentBanner3">
-        <div class="contentBanner">
+    <div class="contentBanner3">
+        <div class="contentBannerText">
+            <h1 class="homepage">Canadian Space Agency</h1>
+            <br><br>
+            <b>Case Study</b> 
+            <br>Government Agency Website Redesign
+            <br>Group & Solo Project, 2 team members
+            <br><b>My Role:</b> UX/UI Developer</div>
+        <div><!-- content banner image --><img src="images/CSA.png" alt="Canadian Space Agency"></div>
+    </div>
+    <!-- Banner 4 -->
+    <div class="contentBanner4">
             <div class="contentBannerText">
-                <h1 class="homepage">Canadian Space Agency</h1>
+                <h1 class="homepage">Connected Travel</h1>
                 <br><br>
                 <b>Case Study</b> 
-                <br>Government Agency Website Redesign
+                <br>Mobile App Concept
                 <br>Group & Solo Project, 2 team members
                 <br><b>My Role:</b> UX/UI Developer</div>
-           <div><!-- content banner image --><!-- <img src="images/CSA.png" alt="Canadian Space Agency"> --></div>
-        </div>
-        </div>
-        <!-- Banner 4 -->
-        <div class="contentBanner4">
-            <div class="contentBanner">
-                <div class="contentBannerText">
-                    <h1 class="homepage">Connected Travel</h1>
-                    <br><br>
-                    <b>Case Study</b> 
-                    <br>Mobile App Concept
-                    <br>Group & Solo Project, 2 team members
-                    <br><b>My Role:</b> UX/UI Developer</div>
-           <div><!-- content banner image --><!-- <img src="images/ConnectTravel.png" alt="Connect Travel"> --></div>
-        </div>
+        <div><!-- content banner image --><img src="images/ConnectTravel.png" alt="Connect Travel"></div>
     </div>
-    </section>
+</section>
 <!----------------------------- /////// INTRO TEXT ROW 4 /////// ------------------>
     <section class="introText">
         <div>
