stuck, trying to make content banners span 100 per cent of page and be of equal h and w
I want content banners 1 & 2 to be the same width and height.  I want them to be side by side in desktop and table mode, and on top of each other in cell mode.
Frustrated because I cannot get them to span 100% of screen.  Also cannot get them to be of equal width.
Note: in previous iteration I cleaned up/condensed the code around content banners, removed a <div> and a style.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <header>
-<!---------------------- /////// HEADER  ROW 1 ///////------------------------->
+<!---------------------- /////// HEADER  *ROW 1 ///////------------------------->
         <div class="logo"><img src="images/Logo Kim Taylor.png" alt="Kim Taylor UX/UI Designer" width="270" height="131"></div>
         <h1 class="animate__animated animate__hinge">Work In Progress
         </h1>
@@ -23,7 +23,7 @@
         </div>
     </header>
     <main>
-<!----------------------- /////// CONTENT BANNERS ROW 2 /////// ---------------->
+<!----------------------- /////// CONTENT BANNERS *ROW 2 /////// ---------------->
      <section class="contentBannerA">
          <div class="contentBanner1"> <!-- EVA -->
             <div class="contentBannerText">
@@ -47,7 +47,7 @@
             <div><!-- content banner image --><img src="images/PACT.png" alt="PACT"></div>
         </div>
     </section>
-<!------------------------ CONTENT BANNERS ROW 3 --------------------------------->
+<!------------------------ CONTENT BANNERS *ROW 3 --------------------------------->
 <section class="contentBannerB">  
     <!-- Banner 3 -->
     <div class="contentBanner3">
@@ -72,7 +72,7 @@
         <div><!-- content banner image --><img src="images/ConnectTravel.png" alt="Connect Travel"></div>
     </div>
 </section>
-<!----------------------------- /////// INTRO TEXT ROW 4 /////// ------------------>
+<!----------------------------- /////// INTRO TEXT *ROW 4 /////// ------------------>
     <section class="introText">
         <div>
             <!-- INTRO TEXT -->
@@ -84,7 +84,7 @@
         </div>
     </section>
 </main>
-<!---------------------- /////// FOOTER ROW 5 ///////-------------------------->
+<!---------------------- /////// FOOTER *ROW 5 ///////-------------------------->
 <footer>
     <div>&#169; Kim Taylor 2021</div>
         <div><a href="mailto:kataylor1@gmail.com"><img src="images/envelope.png" alt="Email Me"></a>
